--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "express": "^4.19.2",
     "helmet": "^7.1.0",
     "module-alias": "^2.2.3",
-    "node-html-parser": "^6.1.13"
+    "node-html-parser": "^6.1.13",
+    "puppeteer": "^24.3.0"
   },
   "_moduleAliases": {
     "@": "src"
